-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
In nodemap_map_id(), the GID branch of the offset handling uses nm_offset_start_uid instead of nm_offset_start_gid:
} else if (id_type == NODEMAP_GID) { offset_start = nodemap->nm_offset_start_uid; // should be _gid offset_limit = nodemap->nm_offset_limit_gid;
Found by code inspection of nodemap_handler.c.