LU-20087 nodemap: fix wrong offset_start for GID mapping

In nodemap_map_id(), the NODEMAP_GID branch incorrectly uses
nm_offset_start_uid instead of nm_offset_start_gid. This causes
GID offset mapping to use the UID offset start value, resulting
in wrong GID mappings when UID and GID offsets differ.

Fixes: e3051ad0f1c8 ("LU-18109 utils: adding nodemap offset capability")
Signed-off-by: Sohei Koyama <skoyama@ddn.com>
Change-Id: I8befefa6c34bcfbdaf237d0b9f2018fc29009405
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/65143
Reviewed-by: Andreas Dilger <adilger@thelustrecollective.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Sebastien Buisson <sbuisson@ddn.com>
Tested-by: jenkins <devops@whamcloud.com>
Reviewed-by: Marc Vef <mvef@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>